WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99412
Fix some appearance glitches of multiple fields input elements
https://bugs.webkit.org/show_bug.cgi?id=99412
Summary
Fix some appearance glitches of multiple fields input elements
Kent Tamura
Reported
2012-10-15 21:24:05 PDT
* If CSS-specified width is wider than the intrinsic width of an input, the spin button and the picker indicator triangle should be put at the right side of the content area * Remove top, right, and bottom padding to match input[type=number] appearance as possible * Remove unnecessary position:relative for the spin button
Attachments
Patch
(124.48 KB, patch)
2012-10-15 22:58 PDT
,
Kent Tamura
haraken
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-10-15 22:58:06 PDT
Created
attachment 168857
[details]
Patch
Kentaro Hara
Comment 2
2012-10-15 23:27:08 PDT
Comment on
attachment 168857
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=168857&action=review
> LayoutTests/ChangeLog:15 > + * platform/chromium-mac/fast/forms/date-multiple-fields/date-multiple-fields-appearance-style-expected.png: > + * platform/chromium-mac/fast/forms/time-multiple-fields/time-multiple-fields-appearance-style-expected.png:
Why did you update these two images only? (I wanted to see the image diffs on chromium-mac for other tests, if possible.)
Kent Tamura
Comment 3
2012-10-15 23:33:58 PDT
Comment on
attachment 168857
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=168857&action=review
>> LayoutTests/ChangeLog:15 >> + * platform/chromium-mac/fast/forms/time-multiple-fields/time-multiple-fields-appearance-style-expected.png: > > Why did you update these two images only? (I wanted to see the image diffs on chromium-mac for other tests, if possible.)
These images are FYI to see rendering differences. For other tests, differences are just paddings. I can't generate correct Chromium-mac results locally because I'm using OSX 10.8 and Chromium-mac is 10.7. So, to add all of images wastes resources.
Kentaro Hara
Comment 4
2012-10-15 23:36:52 PDT
Comment on
attachment 168857
[details]
Patch ok
Kent Tamura
Comment 5
2012-10-15 23:54:48 PDT
Committed
r131421
: <
http://trac.webkit.org/changeset/131421
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug